[package]
name = "ws-relay"
version = "0.1.0"
edition = "2021"
description = "Relay Websocket connections."
authors = ["zkonge <zkonge@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/zkonge/ws-relay"
repository = "https://github.com/zkonge/ws-relay"
license-file = "LICENSE"

[dependencies]
once_cell = "1"
dashmap = "5"
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
tracing-subscriber = "0.3"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.5", features = ["ws"] }

[profile.release]
strip = true
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
